# nzglid

./: CHANGELOG.md  LICENSE  NZGLID.txt  README.md  environment.yml  nzglid.py  pyproject.toml  sources.txt
src/nzglid/: __init__.py  helpers.py  inspect.py  nzglid.py  rasterise.py  resample.py  utils.py
